--- a/app/views/pages/play.ejs
+++ b/app/views/pages/play.ejs
@@ -1,1 +1,13 @@
-<button id='play'>play</button>
+<div id='board'>
+	<input class='c' id='a0' readonly='readonly'>
+	<input class='c' id='a1' readonly='readonly'>
+	<input class='c' id='a2' readonly='readonly'><br>
+	<input class='c' id='b0' readonly='readonly'>
+	<input class='c' id='b1' readonly='readonly'>
+	<input class='c' id='b2' readonly='readonly'><br>
+	<input class='c' id='c0' readonly='readonly'>
+	<input class='c' id='c1' readonly='readonly'>
+	<input class='c' id='c2' readonly='readonly'>
+</div>
+<input id='match' value='AAA000'>
+<button id='play'>start</button>
