--- a/app/views/layouts/play_l.ejs
+++ b/app/views/layouts/play_l.ejs
@@ -122,7 +122,12 @@
 
 
       io.socket.on('update-board', function(data){
-        var board = data;
+        var board = [];
+        var c = ['', 'O', 'X'];
+        var i;
+        for (i=0; i<data.length; i++) {
+          board[i] = c[data[i]];
+        }
         console.log(board);
         $('#a0').val(board[0]);
         $('#a1').val(board[1]);
@@ -144,6 +149,7 @@
       .c {
         height: 20px; width: 20px;
         transition-duration: 0.4s;
+        text-align: center;
       }
       .c:hover {
         border-color: blue;
