link system development

--- a/app/views/layouts/main_l.ejs
+++ b/app/views/layouts/main_l.ejs
@@ -113,7 +113,7 @@
     <script type='text/javascript'>
       $('#new').click(function(){
         io.socket.post('/server/create', '', function(data, data2){
-          window.location.href = "/play";
+          window.location.href = "/play/AAA000";
         });
       });
     </script>
