--- a/app/views/pages/play.ejs
+++ b/app/views/pages/play.ejs
@@ -9,5 +9,5 @@
 	<input class='c' id='c1' readonly='readonly'>
 	<input class='c' id='c2' readonly='readonly'>
 </div>
-<input id='match' value='AAA000'>
+<input id='match' value='<%= match %>' >
 <button id='play'>start</button>
