--- a/app/views/layouts/main_l.ejs
+++ b/app/views/layouts/main_l.ejs
@@ -113,7 +113,8 @@
     <script type='text/javascript'>
       $('#new').click(function(){
         io.socket.post('/server/create', '', function(data, data2){
-          window.location.href = "/play/AAA000";
+          var gameID = data;
+          window.location.href = "/play/"+gameID;
         });
       });
     </script>
