frontend main page development

--- a/app/views/pages/main.ejs
+++ b/app/views/pages/main.ejs
@@ -1,2 +1,12 @@
-<h1>TicTacToe with a link</h1>
-<button id='new'>new game</button>
+<div id='banner5'></div>
+<div id='banner4'></div>
+<div id='banner3'></div>
+<div id='banner2'></div>
+<div id='banner1'></div>
+<div id='logo'><h1>Tatetí</h1></div>
+
+<button id='new'><h1>NEW GAME</h1></button>
+
+<button class='btn' id='main'>main</button>
+<button class='btn' id='about'>about</button>
+<div class='btn' id='by'>emiliano romero carranza</div>
