--- a/app/views/layouts/main_l.ejs
+++ b/app/views/layouts/main_l.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TicTacToeLink | main</title>
+    <title>Tatetí | online</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Viewport mobile tag for sensible mobile support -->
@@ -118,5 +118,147 @@
         });
       });
     </script>
+
+    <style>
+
+      @import url('https://fonts.googleapis.com/css?family=Plaster&display=swap');
+      
+      body {
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        background-color: black;
+      }
+
+      #logo {
+
+        font-family: 'Plaster', cursive;
+
+        color: #C9C0BB;
+
+        text-shadow: 2px 2px black;
+
+        top: 5%;
+        left: 2%;
+
+        z-index: 2;
+        position: fixed;
+
+      }
+
+      #banner5 {
+        width: 100%; height: 4%;
+        background-color: #33001a;
+
+        position: fixed;
+
+        top: 0px;
+      }
+      #banner4 {
+        width: 100%; height: 4%;
+        background-color: #4d0000;
+
+        position: fixed;
+
+        top: 4%;
+      }
+      #banner3 {
+        width: 100%; height: 4%;
+        background-color: #990000;
+
+        position: fixed;
+
+        top: 8%;
+      }
+      #banner2 {
+        width: 100%; height: 4%;
+        background-color: #b32400;
+
+        position: fixed;
+
+        top: 12%;
+      }
+      #banner1 {
+        width: 100%; height: 4%;
+        background-color: #ffbb33;
+
+        position: fixed;
+
+        top: 16%;
+      }
+
+      #main {
+        position: fixed;
+        color: white;
+        bottom: 2%;
+        left: 2%;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid transparent;
+        transition-duration: 0.4s;
+
+      }
+      #main:hover {
+        border-bottom: 2px solid white;
+      }
+
+      #about {
+        position: fixed;
+        color: white;
+        bottom: 2%;
+        left: 8%;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid transparent;
+        transition-duration: 0.4s;
+
+      }
+      #about:hover {
+        border-bottom: 2px solid white;
+      }
+
+      #by {
+        position: fixed;
+        color: white;
+        bottom: 2%;
+        right: 2%;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid transparent;
+        transition-duration: 0.4s;
+
+      }
+      #by:hover {
+        border-bottom: 2px solid white;
+      }
+
+      .btn {
+        padding: 0.5%;
+      }
+
+      /*UNIQUE CSS FOR THIS PAGE*/
+      /*===========================================*/
+
+      #new {
+        position: fixed;
+        color: white;
+        top: 50%;
+        left: 42%;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid transparent;
+        transition-duration: 0.4s;
+
+      }
+      #new:hover {
+        border-bottom: 2px solid white;
+      }
+
+      /*===========================================*/
+
+
+    </style>
+
   </body>
 </html>
