client game frontend and backend fixes

--- a/app/views/pages/play.ejs
+++ b/app/views/pages/play.ejs
@@ -1,3 +1,12 @@
+<div id='banner5'></div>
+<div id='banner4'></div>
+<div id='banner3'></div>
+<div id='banner2'></div>
+<div id='banner1'></div>
+<div id='logo'><h1>Tatetí</h1></div>
+
+
+
 <div id='board'>
 	<input class='c' id='a0' readonly='readonly'>
 	<input class='c' id='a1' readonly='readonly'>
@@ -9,5 +18,22 @@
 	<input class='c' id='c1' readonly='readonly'>
 	<input class='c' id='c2' readonly='readonly'>
 </div>
-<input id='match' value='<%= match %>' >
+<input id='match' value='<%= match %>' type='hidden'>
+<input id='me'  type='hidden'>
 <button id='play'>start</button>
+
+<div id='name_me'><h1>Me</h1></div>
+<div id='time_me'>
+	<div id='time_me_fill'></div>
+</div>
+
+
+<div id='name_vs'><h1>Other</h1></div>
+<div id='time_vs'>
+	<div id='time_vs_fill'></div>
+</div>
+
+
+<button class='btn' id='main'>main</button>
+<button class='btn' id='about'>about</button>
+<div class='btn' id='by'>emiliano romero carranza</div>
