--- a/app/views/layouts/play_l.ejs
+++ b/app/views/layouts/play_l.ejs
@@ -112,10 +112,10 @@
     <!--SCRIPTS END-->
 
     <script type="text/javascript">
-      $('#play').click(function(){
+      $(document).ready(function(){
         var match = $('#match').val();
         io.socket.post('/server/conn', {match}, function(data, data2){
-          //
+          $('#me').val(data);
         });
       });
 
@@ -141,18 +141,225 @@
         $('#c2').val(board[8]);
       });
 
+      var turn;
+      io.socket.on('update-turn', function(data){
+        turn = data;
+      });
+
+      var time; 
+      var h;
+      io.socket.on('update-time', function(data){
+        time = data;
+        h = (time*100)/5000;
+        if ($('#me').val() == turn) {
+          $('#time_me_fill').css({'height': h+'%'});
+        } else {
+          $('#time_vs_fill').css({'height': h+'%'});
+        }
+      });
+
+
 
     </script>
 
     <style>
+
+      @import url('https://fonts.googleapis.com/css?family=Plaster&display=swap');
+      
+      body {
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        background-color: black;
+      }
+
+      #logo {
+
+        font-family: 'Plaster', cursive;
+
+        color: #C9C0BB;
+
+        text-shadow: 2px 2px black;
+
+        top: 5%;
+        left: 2%;
+
+        z-index: 2;
+        position: fixed;
+
+      }
+
+      #banner5 {
+        width: 100%; height: 4%;
+        background-color: #33001a;
+
+        position: fixed;
+
+        top: 0px;
+      }
+      #banner4 {
+        width: 100%; height: 4%;
+        background-color: #4d0000;
+
+        position: fixed;
+
+        top: 4%;
+      }
+      #banner3 {
+        width: 100%; height: 4%;
+        background-color: #990000;
+
+        position: fixed;
+
+        top: 8%;
+      }
+      #banner2 {
+        width: 100%; height: 4%;
+        background-color: #b32400;
+
+        position: fixed;
+
+        top: 12%;
+      }
+      #banner1 {
+        width: 100%; height: 4%;
+        background-color: #ffbb33;
+
+        position: fixed;
+
+        top: 16%;
+      }
+
+      #main {
+        position: fixed;
+        color: white;
+        bottom: 2%;
+        left: 2%;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid transparent;
+        transition-duration: 0.4s;
+
+      }
+      #main:hover {
+        border-bottom: 2px solid white;
+      }
+
+      #about {
+        position: fixed;
+        color: white;
+        bottom: 2%;
+        left: 8%;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid transparent;
+        transition-duration: 0.4s;
+
+      }
+      #about:hover {
+        border-bottom: 2px solid white;
+      }
+
+      #by {
+        position: fixed;
+        color: white;
+        bottom: 2%;
+        right: 2%;
+        background-color: transparent;
+        border: none;
+        border-bottom: 2px solid transparent;
+        transition-duration: 0.4s;
+
+      }
+      #by:hover {
+        border-bottom: 2px solid white;
+      }
+
+      .btn {
+        padding: 0.5%;
+      }
+
+      /*UNIQUE CSS FOR THIS PAGE*/
+      /*===========================================*/
+
+      #board {
+        position: fixed;
+        left: 35%; top: 30%;
+
+        width: 30%; height: 40%;
+      }
       .c {
-        height: 20px; width: 20px;
+        height: 39%; width: 29%;
+
+        position: relative;
+
+        background-color: transparent;
+        color: white;
+        border: 2px solid white;
+
+        float: left;
+        margin: none; left: none;
+
         transition-duration: 0.4s;
         text-align: center;
+        font-size: 180%;
       }
       .c:hover {
-        border-color: blue;
+        background-color: rgb(20, 20, 20);
       }
+
+      #name_me {
+        color: white;
+        position: fixed;
+        left: 25%; top: 30%;
+      }
+      #time_me {
+
+        height: 49%; width: 1%;
+        position: fixed;
+        left: 33%; top: 30%;
+
+        border: 2px solid white;
+
+      }
+      #time_me_fill {
+
+        height: 100%; width: 100%;
+        position: relative;
+        float: right;
+        left: 0%; top: 0%;
+
+        background-color: green;
+
+        border: none; margin: none;
+
+      }
+
+      #time_vs {
+
+        height: 49%; width: 1%;
+        position: fixed;
+        left: 63.2%; top: 30%;
+
+        border: 2px solid white;
+
+      }
+      #time_vs_fill {
+
+        height: 100%; width: 100%;
+        position: relative;
+        float: right;
+        left: 0%; top: 0%;
+
+        background-color: green;
+
+        border: none; margin: none;
+
+      }
+      
+      /*===========================================*/
+
     </style>
 
   </body>
