--- a/app/views/pages/play.ejs
+++ b/app/views/pages/play.ejs
@@ -18,8 +18,15 @@
 	<input class='c' id='c1' readonly='readonly'>
 	<input class='c' id='c2' readonly='readonly'>
 </div>
+<div id='score'>
+	<input id='score_me' value='ME: ' readonly='readonly'>
+	<input id='score_vs' value='OTHER: ' readonly='readonly'>
+</div>
+
+
 <input id='match' value='<%= match %>' type='hidden'>
 <input id='me'  type='hidden'>
+<input id='vs'  type='hidden'>
 <button id='play'>start</button>
 
 <div id='name_me'><h1>Me</h1></div>
