--- a/app/views/layouts/main_l.ejs
+++ b/app/views/layouts/main_l.ejs
@@ -117,6 +117,19 @@
           window.location.href = "/play/"+gameID;
         });
       });
+
+
+      //menus
+      //=======================
+      $('#main').click(function(){
+        window.location.href = "/";
+      });
+      function openInNewTab(url) {
+        var win = window.open(url, '_blank');
+        win.focus();
+      }
+      //=======================
+
     </script>
 
     <style>
