--- a/app/views/pages/main.ejs
+++ b/app/views/pages/main.ejs
@@ -8,5 +8,4 @@
 <button id='new'><h1>NEW GAME</h1></button>
 
 <button class='btn' id='main'>main</button>
-<button class='btn' id='about'>about</button>
-<div class='btn' id='by'>emiliano romero carranza</div>
+<div class='btn' id='by' onclick="openInNewTab('https://github.com/RomeroCarranzaEmiliano/TicTacToeLink');">emiliano romero carranza</div>
